# nbfc-linux-gui

./: README.md  README.pt-BR.md  index.html  io.github.andre0n.FanControl.yaml  nbfc_linux_gui.py  pyproject.toml
data/: io.github.andre0n.FanControl.desktop  io.github.andre0n.FanControl.metainfo.xml
docs/: index.html  script.js  styles.css
flatpak/: nbfc-gui-launcher.sh
nbfc_linux_gui/: __init__.py  app.py  i18n.py  main.py  nbfc.py
nbfc_linux_gui/objects/: fan_widget.py  mode_selector.py  window.py
po/: pt_BR.po
